--- a/base-auth/pom.xml
+++ b/base-auth/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>base-mdm</artifactId>
+        <artifactId>spring-cloud-base</artifactId>
         <groupId>com.yungsem</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>base-mdm-biz</artifactId>
+    <artifactId>base-auth</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -17,6 +17,7 @@
     </properties>
 
     <dependencies>
+        <!--self-->
         <dependency>
             <groupId>com.yungsem</groupId>
             <artifactId>base-mdm-api</artifactId>
@@ -25,14 +26,15 @@
             <groupId>com.yungsem</groupId>
             <artifactId>base-common-mybatis</artifactId>
         </dependency>
+        <!--security-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+        <!--spring boot-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.5.RELEASE</version>
-            </plugin>
-        </plugins>
-    </build>
 </project>
