--- a/base-common/pom.xml
+++ b/base-common/pom.xml
@@ -16,6 +16,7 @@
         <module>base-common-mybatis</module>
         <module>base-common-security</module>
         <module>base-common-feign</module>
+        <module>base-common-swagger</module>
     </modules>
 
     <properties>
