--- a/base-mdm/base-mdm-biz/pom.xml
+++ b/base-mdm/base-mdm-biz/pom.xml
@@ -18,12 +18,25 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.yungsem</groupId>
             <artifactId>base-mdm-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.yungsem</groupId>
             <artifactId>base-common-mybatis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+            <version>2.0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yungsem</groupId>
+            <artifactId>base-common-swagger</artifactId>
         </dependency>
     </dependencies>
     <build>
